# Extract_pdf_Catalog

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cost.py  db.py  docker-compose.yml  excel_processor.py  main.py  models.py  pyproject.toml  test_cost.py  test_db.py  test_excel_processor.py
templates/: index.html
